--- a/hw05/css/style.css
+++ b/hw05/css/style.css
@@ -1,72 +1,81 @@
-document, body {
-   font-family: Arial;
-   color: #444;
-   margin: 0px;
-   background: #e6ecf0;
+document,
+body {
+  font-family: Arial;
+  color: #444;
+  margin: 0px;
+  background: #e6ecf0;
 }
 .navbar {
-    box-shadow: 0 1px 3px 0 rgba(0,0,0,0.25);
-    border-bottom: solid 1px rgba(100, 100, 100, 0.3);
+  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.25);
+  border-bottom: solid 1px rgba(100, 100, 100, 0.3);
 }
 
 h1 {
-    margin: 0px;
-    font-weight: 400;
-    height: 100px;
-    line-height: 100px;
-    padding-left: 20px;
-    font-size: 30px;
-    border-bottom: solid 1px #DDD;
+  margin: 0px;
+  font-weight: 400;
+  height: 100px;
+  line-height: 100px;
+  padding-left: 20px;
+  font-size: 30px;
+  border-bottom: solid 1px #ddd;
 }
 pre {
-    margin-top: 20px;
-    font-size: 12px;
+  margin-top: 20px;
+  font-size: 12px;
 }
 
 .container-main {
-    width: 55vw;
-    min-height: calc(100vh - 70px);
-    margin: auto;
-    margin-top: 70px;
-    display: block;
-    background: #FFF;
+  width: 55vw;
+  min-height: calc(100vh - 70px);
+  margin: auto;
+  margin-top: 70px;
+  display: block;
+  background: #fff;
 }
 .input-group {
-    margin: 20px;
+  margin: 20px;
 }
 .fa-twitter {
-    color: #1DA1F2;
+  color: #1da1f2;
 }
 .btn-primary {
-    background: #1DA1F2;
+  background: #1da1f2;
 }
 
 .tweet {
-    border-bottom: solid 1px #DDD;
-    padding: 20px;
+  border-bottom: solid 1px #ddd;
+  padding: 20px;
 }
 .tweet img {
-    height: 200px;
+  height: 200px;
 }
 .red {
   background: red;
 }
 
 .tweet-red {
-    background: rgba(255, 30, 30, 0.1);
+  background: rgba(255, 30, 30, 0.1);
 }
-
-
 
 /*************************/
 /* JSON Syntax Highlight */
 /*************************/
 pre {
-    background-color: #FFF;
-    border: 0px;
+  background-color: #fff;
+  border: 0px;
 }
-.string { color: #BD5667; }
-.number { color: #383578; }
-.boolean { color: #25A680; }
-.null { color: #31484E; }
-.key { color: #2B5173; }
+.string {
+  color: #bd5667;
+}
+.number {
+  color: #383578;
+}
+.boolean {
+  color: #25a680;
+}
+.null {
+  color: #31484e;
+}
+.key {
+  color: #2b5173;
+}
