--- a/hw05/css/style.css
+++ b/hw05/css/style.css
@@ -48,7 +48,9 @@ pre {
 .tweet img {
     height: 200px;
 }
-
+.red {
+  background: red;
+}
 
 .tweet-red {
     background: rgba(255, 30, 30, 0.1);
