--- a/hw06/css/style.css
+++ b/hw06/css/style.css
@@ -1,58 +1,60 @@
-document, body {
-   font-family: Arial;
-   color: #444;
-   margin: 0px;
-   background: #e6ecf0;
+document,
+body {
+  font-family: Arial;
+  color: #444;
+  margin: 0px;
+  background: #e6ecf0;
 }
 .navbar {
-    box-shadow: 0 1px 3px 0 rgba(0,0,0,0.25);
-    border-bottom: solid 1px rgba(100, 100, 100, 0.3);
+  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.25);
+  border-bottom: solid 1px rgba(100, 100, 100, 0.3);
 }
 
 h1 {
-    margin: 0px;
-    font-weight: 400;
-    height: 100px;
-    line-height: 100px;
-    padding-left: 20px;
-    font-size: 30px;
-    border-bottom: solid 1px #DDD;
+  margin: 0px;
+  font-weight: 400;
+  height: 100px;
+  line-height: 100px;
+  padding-left: 20px;
+  font-size: 30px;
+  border-bottom: solid 1px #ddd;
 }
 pre {
-    margin-top: 20px;
-    font-size: 12px;
+  margin-top: 20px;
+  font-size: 12px;
 }
 
 .container-main {
-    width: 55vw;
-    min-height: calc(100vh - 70px);
-    margin: auto;
-    margin-top: 70px;
-    display: block;
-    background: #FFF;
+  width: 55vw;
+  min-height: calc(100vh - 70px);
+  margin: auto;
+  margin-top: 70px;
+  display: block;
+  background: #fff;
 }
 .input-group {
-    margin: 20px;
+  margin: 20px;
 }
 .fa-twitter {
-    color: #1DA1F2;
+  color: #1da1f2;
 }
 .btn-primary {
-    background: #1DA1F2;
+  background: #1da1f2;
 }
 
 .tweet {
-    border-bottom: solid 1px #DDD;
-    padding: 1em;
+  border-bottom: solid 1px #ddd;
+  padding: 1em;
 }
 .tweet img {
-    height: 200px;
+  height: 200px;
 }
 
 .like {
   display: block;
   width: 1.5em;
   fill: #7f8c8d;
+  cursor: pointer;
 }
 
 .active {
@@ -64,17 +66,117 @@ pre {
   justify-content: flex-end;
 }
 
+.active svg {
+  -webkit-animation: heartbeat 0.5s cubic-bezier(0.245, 0.325, 0.51, 1.305) 4
+    alternate;
+  -moz-animation: heartbeat 0.5s cubic-bezier(0.245, 0.325, 0.51, 1.305) 4
+    alternate;
+  -o-animation: heartbeat 0.5s cubic-bezier(0.245, 0.325, 0.51, 1.305) 4
+    alternate;
+  animation: heartbeat 0.5s cubic-bezier(0.245, 0.325, 0.51, 1.305) 4 alternate;
+  fill: #red;
+}
 
+@-webkit-keyframes heartbeat {
+  to {
+    -webkit-transform: scale(2);
+    transform: scale(2);
+    -webkit-transform-origin: center center;
+    transform-origin: center center;
+    -webkit-animation-timing-function: ease-out;
+    animation-timing-function: ease-out;
+    fill: red;
+  }
+  from {
+    -webkit-transform: scale(0.98);
+    transform: scale(0.98);
+    -webkit-transform-origin: center center;
+    transform-origin: center center;
+    -webkit-animation-timing-function: ease-out;
+    animation-timing-function: ease-out;
+    fill: yellow;
+  }
+}
+@-moz-keyframes heartbeat {
+  to {
+    -webkit-transform: scale(2);
+    transform: scale(2);
+    -webkit-transform-origin: center center;
+    transform-origin: center center;
+    -webkit-animation-timing-function: ease-out;
+    animation-timing-function: ease-out;
+    fill: red;
+  }
+  from {
+    -webkit-transform: scale(0.98);
+    transform: scale(0.98);
+    -webkit-transform-origin: center center;
+    transform-origin: center center;
+    -webkit-animation-timing-function: ease-out;
+    animation-timing-function: ease-out;
+    fill: yellow;
+  }
+}
+@-o-keyframes heartbeat {
+  to {
+    -webkit-transform: scale(2);
+    transform: scale(2);
+    -webkit-transform-origin: center center;
+    transform-origin: center center;
+    -webkit-animation-timing-function: ease-out;
+    animation-timing-function: ease-out;
+    fill: red;
+  }
+  from {
+    -webkit-transform: scale(0.98);
+    transform: scale(0.98);
+    -webkit-transform-origin: center center;
+    transform-origin: center center;
+    -webkit-animation-timing-function: ease-out;
+    animation-timing-function: ease-out;
+    fill: yellow;
+  }
+}
+@keyframes heartbeat {
+  to {
+    -webkit-transform: scale(2);
+    transform: scale(2);
+    -webkit-transform-origin: center center;
+    transform-origin: center center;
+    -webkit-animation-timing-function: ease-out;
+    animation-timing-function: ease-out;
+    fill: red;
+  }
+  from {
+    -webkit-transform: scale(0.98);
+    transform: scale(0.98);
+    -webkit-transform-origin: center center;
+    transform-origin: center center;
+    -webkit-animation-timing-function: ease-out;
+    animation-timing-function: ease-out;
+    fill: yellow;
+  }
+}
 
 /*************************/
 /* JSON Syntax Highlight */
 /*************************/
 pre {
-    background-color: #FFF;
-    border: 0px;
+  background-color: #fff;
+  border: 0px;
 }
-.string { color: #BD5667; }
-.number { color: #383578; }
-.boolean { color: #25A680; }
-.null { color: #31484E; }
-.key { color: #2B5173; }
+.string {
+  color: #bd5667;
+}
+.number {
+  color: #383578;
+}
+.boolean {
+  color: #25a680;
+}
+.null {
+  color: #31484e;
+}
+.key {
+  color: #2b5173;
+}
