--- a/hw10/css/style.css
+++ b/hw10/css/style.css
@@ -1,3 +1,45 @@
+@import url('https://fonts.googleapis.com/css?family=Lato');
+
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
 body {
     background: #F0F0F0;
+    margin: 0 auto;
+    font-family: 'Lato', sans-serif;
+}
+
+.container {
+    width: 400px;
+    margin: 20px auto;
+    padding: 15px;
+    background: #fff;
+    border-radius: 5px;
+}
+
+select#station_list {
+    margin-bottom: 15px;
+    width: 100%;
+    font-size: 16px;
+    color: #444;
+}
+
+h3 {
+    margin: 20px 0 5px;
+}
+
+span {
+    display: line-block;
+    visibility: middle;
+    margin: 5px;
+    padding: 5px;
+    font-weight: normal;
+}
+
+.train-square {
+    width: 30px;
+    height: 30px;
 }
