--- a/finalproject/styles.css
+++ b/finalproject/styles.css
@@ -121,14 +121,14 @@ label {
     margin: 0 auto;
     max-width: 900px;
 }
-#page_img {
+#pageImg {
     width: initial;
     height: inherit;
     margin: 0 auto;
     display: flex;
     justify-content: center;
 }
-#page_text {
+#pageText {
     position: absolute;
     color: white;
     /*color: #1F232B;*/
@@ -138,7 +138,7 @@ label {
     padding-left: 10px;
     width: 300px;
 }
-#page_text p {
+#pageText p {
     text-align: center;
 }
 #response {
