final project wip update4

--- a/finalproject/styles.css
+++ b/finalproject/styles.css
@@ -7,6 +7,7 @@
 }
 html, body {
     border: 0px;
+    background: black;
 }
 body {
     font: 1em/1.25 Arial, Helvetica, sans-serif;
@@ -24,102 +25,28 @@ body {
     padding: 0;
     font: normal normal normal 1em/1.25 Arial, Helvetica, sans-serif;
 }
-blockquote {
-    margin: 1.25em;
-    padding: 1.25em
-}
-q {
-    font-style: italic;
-}
-acronym, abbr {
-    cursor: help;
-    border-bottom: 1px dashed;
-}
-small {
-    font-size:.85em;
-}
-big {
-    font-size:1.2em;
-}
 /* Links and Images */
  a, a:link, a:visited, a:active, a:hover {
     text-decoration: none;
 }
 img {
     border: none;
-    /*width: inherit;*/
-    height: inherit;
+    width: inherit;
+    /*height: inherit;*/
     max-width: 100%;
-    /*max-height: 900px;
+    max-height: 900px;
     height: 900px;
-    padding-right: 40px;*/
-}
-/* Tables */
- table {
-    margin: 0;
-    padding: 0;
-    border: none;
-}
-/* Forms */
- form {
-    margin: 0;
-    padding: 0;
-    display: inline;
-}
-label {
-    cursor: pointer;
-}
-/* Common Classes */
-.textLeft {
-    text-align: left;
-}
-.textRight {
-    text-align: right;
-}
-.textCenter {
-    text-align: center;
-}
-.textJustify {
-    text-align: justify;
 }
 .blockCenter {
     display: block;
     margin: 0 auto;
 }
-/* remember to set width */
- .bold {
-    font-weight: bold;
-}
-.italic {
-    font-style: italic;
-}
-.underline {
-    text-decoration: underline;
-}
-.noindent {
-    margin-left: 0;
-    padding-left: 0;
-}
-.nomargin {
-    margin: 0;
-}
-.nopadding {
-    padding: 0;
-}
-.nobullet {
-    list-style: none;
-    list-style-image: none;
-}
 /* Application Specific */
-.avatar {
-  width: 4em;
-  margin: 1em;
-}
 #page {
-    height: 760px;
+    height: 900px;
     background: black;
     margin: 0 auto;
-    max-width: 900px;
+    max-width: 600px;
 }
 #pageImg {
     width: initial;
@@ -144,23 +71,29 @@ label {
 #response {
     position: relative;
     bottom: 300px;
-    /*padding-left: 15px;*/
+    margin: 0 auto -300px;
+    padding-bottom: 20px;
 }
 .choice {
     display: block;
     background-color: rgba(170,154,105, 0.3);
     font-size: 1em;
     color: white;
-
-    border: none;
-    /*border: 1px solid white;*/
+    border-radius: 3px;
+    border: 1px solid white;
     padding: 10px 20px;
-    margin-bottom: 10px;
+    margin: 10px auto;
     text-align: left;
     cursor: pointer;
-    width: 100%;
+    width: 95%;
 }
 .choice:hover {
     background-color: rgba(170,154,105, 0.8);
     color: #edae71;
+}
+.diclaimer {
+    text-align: center;
+    color: grey;
+    font-size: 10px;
+    line-height: 2;
 }
