--- a/finalproject/styles.css
+++ b/finalproject/styles.css
@@ -8,6 +8,7 @@
 html, body {
     border: 0px;
     background: black;
+    color: white;
 }
 body {
     font: 1em/1.25 Arial, Helvetica, sans-serif;
@@ -37,31 +38,28 @@ img {
     max-height: 900px;
     height: 900px;
 }
-.blockCenter {
-    display: block;
-    margin: 0 auto;
-}
 /* Application Specific */
 #page {
+    display: none;
+    margin: 0 auto;
+    background: scroll center top/auto 100%;
+}
+#page, #initialize {
     height: 900px;
-    background: black;
     margin: 0 auto;
     max-width: 600px;
 }
-#pageImg {
-    width: initial;
-    height: inherit;
-    margin: 0 auto;
-    display: flex;
-    justify-content: center;
+#initialize {
+    padding: 180px;
+}
+#initialize div {
+    padding: 10px 20px 0;
 }
 #pageText {
     position: absolute;
     color: white;
-    /*color: #1F232B;*/
     top: 250px;
-/*text-shadow: 1px 1px 2px #B5916B, 1px 1px 5px #B5916B,
-     1px 1px 10px #B5916B, 1px 1px 15px #B5916B;*/
+    text-shadow: 1px 1px 2px #1F232B, 1px 1px 5px #1F232B, 1px 1px 10px #1F232B;
     padding-left: 10px;
     width: 300px;
 }
@@ -70,26 +68,28 @@ img {
 }
 #response {
     position: relative;
-    bottom: 300px;
-    margin: 0 auto -300px;
-    padding-bottom: 20px;
+    top: 600px;
+}
+.flex {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
 }
 .choice {
-    display: block;
     background-color: rgba(170,154,105, 0.3);
     font-size: 1em;
     color: white;
     border-radius: 3px;
-    border: 1px solid white;
+    border: none;
     padding: 10px 20px;
-    margin: 10px auto;
+    margin: 10px 20px 5px;
     text-align: left;
     cursor: pointer;
-    width: 95%;
 }
-.choice:hover {
+.choice:hover,
+.choice:active {
     background-color: rgba(170,154,105, 0.8);
-    color: #edae71;
+    color: #1F232B;
 }
 .diclaimer {
     text-align: center;
