--- a/finalproject/styles.css
+++ b/finalproject/styles.css
@@ -109,22 +109,22 @@ img {
     animation: fadeIn 0.5s ease-in-out 0.3s backwards;
 }
 @-webkit-keyframes fadeIn {
-	0%{top:-30px; opacity: 0;}
-	100%{top:0px; opacity: 1;}
+	0%{left:-30px; opacity: 0;}
+	100%{left:0px; opacity: 1;}
 }
 @-moz-keyframes fadeIn {
-    0%{top:-30px; opacity: 0;}
-	100%{top:0px; opacity: 1;}
+    0%{left:-30px; opacity: 0;}
+	100%{left:0px; opacity: 1;}
 }
 @-o-keyframes fadeIn {
-    0%{top:-30px; opacity: 0;}
-	100%{top:0px; opacity: 1;}
+    0%{left:-30px; opacity: 0;}
+	100%{left:0px; opacity: 1;}
 }
 @-ms-keyframes fadeIn {
-    0%{top:-30px; opacity: 0;}
-	100%{top:0px; opacity: 1;}
+    0%{left:-30px; opacity: 0;}
+	100%{left:0px; opacity: 1;}
 }
 @keyframes fadeIn {
-    0%{top:-30px; opacity: 0;}
-	100%{top:0px; opacity: 1;}
+    0%{left:-30px; opacity: 0;}
+	100%{left:0px; opacity: 1;}
 }
